--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ body{
 	font-size: 16px;
 }
 
-/* curriculum styles*/
+/* schedule styles*/
 .bg-schedule{
 	background-color: var(--secondary-bg-color);
 	padding-right: 50px;
