--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,6 +42,15 @@ body{
 	background-color: #C62828;
 }
 
+.btn-success{
+	color: #ffffff;
+	background-color: #4CAF50;
+}
+
+.btn-success:hover{
+	background-color: #2E7D32;
+}
+
 .link-light{
 	color: #90CAF9;
 }
