--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,8 +20,7 @@ body{
 	border: 0px;
 	border-radius: 0px;
 	padding: 10px 20px;
-	margin-right: 5px;
-	margin-left: 5px;
+	margin: 5px;
 }
 
 .btn-warning{
