--- a/styles/styles.css
+++ b/styles/styles.css
@@ -270,7 +270,7 @@ body{
 	padding-right: 25px;
 
 	border-style: solid;
-	border-left-color: #292929;
+	border-left-color: #FFA000;
 	border-top: none;
 	border-right: none;
 	border-bottom: none;
