--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,6 +130,12 @@ body{
 	filter: blur(10px);
 }
 
+@media only screen and (max-width: 700px){
+	.blurred-background-image{
+		background: #424242;
+	}
+}
+
 .clear-background-image{
 	background: url("../images/background-vector.svg");
 	background-size: cover;
