--- a/styles/styles.css
+++ b/styles/styles.css
@@ -133,6 +133,8 @@ body{
 @media only screen and (max-width: 700px){
 	.blurred-background-image{
 		background: #424242;
+		position: relative;
+		z-index: 0;
 	}
 }
 
