slight color changes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -176,7 +176,7 @@ h3{
 
 /* general information styles*/
 .bg-info{
-	background-color: #212121;
+	background-color: #1d1d1d;
 	padding-right: 50px;
 	padding-left: 50px;
 	padding-top: 70px;
