decreased image file size

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -141,7 +141,7 @@ h3{
 
 /*home styles*/
 .bg-home{
-	background: url("../images/blurred-background-vector.png");
+	background: url("../images/blurred-background-vector.jpg");
 	background-size: cover;
 	display: block;
 	padding-top: 70px;
