--- a/styles/styles.css
+++ b/styles/styles.css
@@ -211,6 +211,17 @@ p{
 	margin: 0 auto;
 }
 
+.content-container-smaller{
+	width: 60%;
+	margin: 0 auto;
+}
+
+@media only screen and (max-width: 720px){
+	.content-container-smaller{
+		width: 90%;
+	}
+}
+
 .bg-map{
 	background-color: rgba(255,255,255,0);
 	margin-bottom: -10px;
@@ -234,6 +245,10 @@ p{
 	display: table-cell;
 	padding: 10px;
 	margin: 10px;
+}
+
+.table-hover-dark tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-color: #424242;
 }
 
 .card{
