--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,7 +213,7 @@ p{
 
 /*home styles*/
 .bg-home{
-	background: url("../images/blurred-background-vector.jpg");
+	background: url("../images/blurred-background-vector.png");
 	background-size: cover;
 	display: block;
 	padding-top: 70px;
