add sponsor tiers

--- a/2020/styles/styles.css
+++ b/2020/styles/styles.css
@@ -196,9 +196,14 @@ h3{
 }
 
 h1{
-	font-size: 27px;
+	font-size: 35px;
 	margin-bottom: 50px;
 	color: #ffffff;
+}
+h2{
+    font-size: 27px;
+    margin-bottom: 40px;
+    color: #ffffff;
 }
 
 h3{
